Convert to Discord bot website

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - FoggYT</title>
+    <title>Fogg Bot - Features</title>
     <style>
         * {
             margin: 0;
@@ -11,10 +11,11 @@
             box-sizing: border-box;
         }
 
+        body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
-            color: #64ee48;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: #dcddde;
+            background: linear-gradient(135deg, #5865F2 0%, #404EED 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -22,27 +23,28 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: rgb(7, 7, 7);
+            background: rgba(0, 0, 0, 0.3);
             padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         header {
             text-align: center;
             margin-bottom: 40px;
-            border-bottom: 3px solid #5b73df;
+            border-bottom: 3px solid #5865F2;
             padding-bottom: 20px;
         }
 
         h1 {
-            color: #667eea;
+            color: #fff;
             font-size: 2.5em;
             margin-bottom: 10px;
         }
 
         .subtitle {
-            color: #555353;
+            color: #b9bbbe;
             font-size: 1.1em;
         }
 
@@ -51,17 +53,17 @@
         }
 
         .profile-section h2 {
-            color: #667eea;
+            color: #5865F2;
             font-size: 1.8em;
             margin-bottom: 15px;
-            border-left: 4px solid #764ba2;
+            border-left: 4px solid #40444B;
             padding-left: 15px;
         }
 
         .profile-section p {
             font-size: 1.05em;
             margin-bottom: 10px;
-            color: #555;
+            color: #dcddde;
         }
 
         .skills {
@@ -72,7 +74,7 @@
         }
 
         .skill-tag {
-            background: #667eea;
+            background: #5865F2;
             color: white;
             padding: 8px 15px;
             border-radius: 20px;
@@ -86,14 +88,15 @@
         .interests li {
             margin-left: 20px;
             margin-bottom: 8px;
+            color: #dcddde;
         }
 
         footer {
             text-align: center;
             margin-top: 40px;
             padding-top: 20px;
-            border-top: 1px solid #ddd;
-            color: #999;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            color: #72767d;
             font-size: 0.9em;
         }
 
@@ -105,7 +108,7 @@
         .links a {
             display: inline-block;
             margin: 0 10px;
-            color: #667eea;
+            color: #5865F2;
             text-decoration: none;
             font-weight: bold;
         }
@@ -118,55 +121,57 @@
 <body>
     <div class="container">
         <header>
-            <h1>About Me</h1>
-            <p class="subtitle">FoggYT - Creator & Developer</p>
+            <h1>🤖 Fogg Bot Features</h1>
+            <p class="subtitle">Everything Your Server Needs</p>
         </header>
 
         <section class="profile-section">
-            <h2>Who I Am</h2>
+            <h2>What is Fogg Bot?</h2>
             <p>
-                Hi! I'm FoggYT, and I'm passionate about creating content and learning web development. 
-                I'm excited to share my journey in coding and technology with the world.
+                Fogg Bot is a versatile Discord bot packed with features to enhance your server experience. 
+                From moderation to fun commands, we've got you covered!
             </p>
         </section>
 
         <section class="profile-section">
-            <h2>What I'm Learning</h2>
-            <p>I'm currently developing my skills in:</p>
+            <h2>Core Features</h2>
+            <p>Fogg Bot includes:</p>
             <div class="skills">
-                <span class="skill-tag">HTML</span>
-                <span class="skill-tag">CSS</span>
-                <span class="skill-tag">JavaScript</span>
-                <span class="skill-tag">Web Development</span>
-                <span class="skill-tag">GitHub</span>
+                <span class="skill-tag">Moderation Tools</span>
+                <span class="skill-tag">Fun Commands</span>
+                <span class="skill-tag">Music</span>
+                <span class="skill-tag">Leveling System</span>
+                <span class="skill-tag">Custom Prefix</span>
             </div>
         </section>
 
         <section class="profile-section">
-            <h2>My Interests</h2>
+            <h2>Key Commands</h2>
             <ul class="interests">
-                <li>Web Development & Design</li>
-                <li>Content Creation</li>
-                <li>Learning New Technologies</li>
-                <li>Building Projects</li>
+                <li>!kick - Remove members from the server</li>
+                <li>!ban - Ban members from the server</li>
+                <li>!mute - Mute members</li>
+                <li>!warn - Issue warnings to members</li>
+                <li>!ping - Check bot latency</li>
+                <li>!help - View all available commands</li>
             </ul>
         </section>
 
         <section class="profile-section">
-            <h2>My Goals</h2>
+            <h2>Why Choose Fogg Bot?</h2>
             <p>
-           My Goal Is To Become A Proffessional Web Developer And Content Creator My Other Big Aim Is To Make A About Me Website : D
-            .
+                Fast, reliable, and constantly updated. Fogg Bot is designed with server owners in mind, 
+                making moderation and management effortless. Join thousands of servers already using Fogg Bot!
             </p>
         </section>
 
         <div class="links">
             <a href="index.html">Home</a>
-            <a href="https://github.com" target="_blank">GitHub</a>
+            <a href="https://discord.com" target="_blank">Discord</a>
         </div>
 
         <footer>
-            <p>&copy; 2026 FoggYT. Made with ❤️ and code.</p>
+            <p>&copy; 2026 Fogg Bot. Enhanced for Discord.</p>
         </footer>
     </div>
 </body>
