--- a/about.html
+++ b/about.html
@@ -15,19 +15,58 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #dcddde;
-            background: linear-gradient(135deg, #5865F2 0%, #404EED 100%);
+            background: #000;
             min-height: 100vh;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Starfield Background */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: 
+                radial-gradient(1px 1px at 20% 30%, white, rgba(255,255,255,.2)),
+                radial-gradient(1px 1px at 60% 70%, white, rgba(255,255,255,.1)),
+                radial-gradient(1.5px 1.5px at 50% 50%, white, rgba(255,255,255,.2)),
+                radial-gradient(1px 1px at 80% 10%, white, rgba(255,255,255,.2)),
+                radial-gradient(2px 2px at 90% 60%, white, rgba(255,255,255,.3)),
+                radial-gradient(1px 1px at 30% 80%, white, rgba(255,255,255,.1)),
+                radial-gradient(1.5px 1.5px at 70% 20%, white, rgba(255,255,255,.2)),
+                radial-gradient(1px 1px at 10% 90%, white, rgba(255,255,255,.15)),
+                radial-gradient(1px 1px at 40% 40%, white, rgba(255,255,255,.25)),
+                radial-gradient(2px 2px at 85% 85%, white, rgba(255,255,255,.2));
+            background-repeat: repeat;
+            background-size: 200% 200%;
+            animation: stars 20s linear infinite;
+            z-index: 1;
+        }
+
+        @keyframes stars {
+            0% {
+                background-position: 0% 0%;
+            }
+            100% {
+                background-position: 200% 200%;
+            }
         }
 
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: rgba(0, 0, 0, 0.3);
+            background: rgba(0, 0, 0, 0.5);
             padding: 40px;
             border-radius: 15px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5), 0 0 30px rgba(88, 101, 242, 0.3);
+            border: 1px solid rgba(88, 101, 242, 0.3);
+            position: relative;
+            z-index: 2;
+            backdrop-filter: blur(10px);
         }
 
         header {
