Add bot invite button with client ID

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         
         <div class="nav-buttons">
             <a href="about.html" class="btn">Learn More</a>
-            <a href="https://discord.com/oauth2/authorize?client_id=YOUR_BOT_ID" class="btn btn-secondary" target="_blank">Invite Bot</a>
+            <a href="https://discord.com/oauth2/authorize?client_id=1457920550696386774&scope=bot&permissions=8" class="btn btn-secondary" target="_blank">Invite Bot</a>
         </div>
 
         <footer>
