--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #fff;
-            background: #000;
+            background: #000 url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><defs><style>@keyframes twinkle{0%{opacity:0.3}50%{opacity:1}100%{opacity:0.3}}.star{animation:twinkle 3s infinite}</style></defs><circle cx="10" cy="20" r="1" fill="white" class="star"/><circle cx="30" cy="15" r="0.8" fill="white" class="star"/><circle cx="50" cy="25" r="1.2" fill="white" class="star"/><circle cx="70" cy="10" r="0.9" fill="white" class="star"/><circle cx="85" cy="35" r="1" fill="white" class="star"/><circle cx="15" cy="50" r="1.1" fill="white" class="star"/><circle cx="40" cy="60" r="0.8" fill="white" class="star"/><circle cx="65" cy="55" r="1" fill="white" class="star"/><circle cx="80" cy="70" r="0.9" fill="white" class="star"/><circle cx="25" cy="80" r="1.2" fill="white" class="star"/><circle cx="55" cy="85" r="1" fill="white" class="star"/><circle cx="75" cy="90" r="0.8" fill="white" class="star"/></svg>') repeat;
+            background-size: 200px 200px;
+            animation: moveStars 30s linear infinite;
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -25,37 +27,12 @@
             overflow: hidden;
         }
 
-        /* Starfield Background */
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: 
-                radial-gradient(1px 1px at 20% 30%, white, rgba(255,255,255,.2)),
-                radial-gradient(1px 1px at 60% 70%, white, rgba(255,255,255,.1)),
-                radial-gradient(1.5px 1.5px at 50% 50%, white, rgba(255,255,255,.2)),
-                radial-gradient(1px 1px at 80% 10%, white, rgba(255,255,255,.2)),
-                radial-gradient(2px 2px at 90% 60%, white, rgba(255,255,255,.3)),
-                radial-gradient(1px 1px at 30% 80%, white, rgba(255,255,255,.1)),
-                radial-gradient(1.5px 1.5px at 70% 20%, white, rgba(255,255,255,.2)),
-                radial-gradient(1px 1px at 10% 90%, white, rgba(255,255,255,.15)),
-                radial-gradient(1px 1px at 40% 40%, white, rgba(255,255,255,.25)),
-                radial-gradient(2px 2px at 85% 85%, white, rgba(255,255,255,.2));
-            background-repeat: repeat;
-            background-size: 200% 200%;
-            animation: stars 20s linear infinite;
-            z-index: 1;
-        }
-
-        @keyframes stars {
+        @keyframes moveStars {
             0% {
-                background-position: 0% 0%;
+                background-position: 0 0;
             }
             100% {
-                background-position: 200% 200%;
+                background-position: 200px 200px;
             }
         }
 
